crates/strider/tests/snapshots/v3__x86__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x401160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ XMM0", shape=house, fillcolor="#163030"];
  "8" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v17" [color="#888888", style=dashed];
  "v17" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x401160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "20" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x4012c2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "25" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[3] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffe4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "29" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[2] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "33" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "37" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="init\nEAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "41" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "45" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ ST0", shape=house, fillcolor="#163030"];
  "8" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v49" [color="#888888", style=dashed];
  "v49" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v50" [color="#888888", style=dashed];
  "v50" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="φ EDX", shape=house, fillcolor="#163030"];
  "8" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v51" [color="#888888", style=dashed];
  "v51" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v52" [color="#888888", style=dashed];
  "v52" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ ESI", shape=house, fillcolor="#163030"];
  "8" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "53" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "54" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="φ Mem", shape=house, fillcolor="#163030"];
  "8" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "5" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "57" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x4012b2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "59" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "57" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "60" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "33" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "60" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
}
